fixed issue with skill list now fits better on mobile device

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,18 @@ h2 {
   line-height: 1.5;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 #skills-section {
   background-color: #36454f;
   display: flex;
@@ -227,6 +239,7 @@ h2 {
   width: 100%;
   max-width: 1000px;
   margin: auto;
+  padding: 0; /* Ensure there's no padding */
 }
 
 .skill-item {
@@ -250,6 +263,8 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%; /* Ensure consistent height */
 }
 
 .item-container img {
@@ -263,8 +278,8 @@ h2 {
   font-size: var(--skills-section-font-size-p);
   font-weight: 600;
   color: #f0ebeb;
+  margin: 0; /* Reset margin */
 }
-
 
 #projects-section {
   padding: 2rem 0;
@@ -515,13 +530,11 @@ a[href^="tel"]:hover {
   }
 
   .skills-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    gap: 2vw;
   }
 
   .skill-item {
-    flex: 1 1 calc(25% - 2vw); /* 4 items per row */
+    flex: 1 1 21%;
   }
 
   .project-grid {
@@ -583,13 +596,11 @@ a[href^="tel"]:hover {
   }
 
   .skills-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    gap: 1.5vw;
   }
 
   .skill-item {
-    flex: 1 1 calc(25% - 3vw); /* 2 items per row */
+    flex: 1 1 23%;
   }
 
   .project-list {
